fix: use jdk 11 elements